use express, and serve files in root dir

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         }
     </style>
     <!-- TODO: heroku address/port, serve index.html with express, import socket.io -->
-    <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
-    <script defer src="script.js"></script>
+    <script defer src="/socket.io/socket.io.js"></script>
+    <script defer src="/script.js"></script>
 </head>
 <body>
     <!-- has a height limit using view height vh. scrolling down for new msgs is handled in script.js -->
