--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
             position: fixed;
             top: 76vh;
         }
+        #dark-theme-container {
+            margin-left: 80%;
+            position: fixed;
+        }
     </style>
     <script defer src="/socket.io/socket.io.js"></script>
     <script defer src="/script.js"></script>
 </head>
-<body style="font-family: Arial, Helvetica, sans-serif;">
+<body style="font-family: Arial, Helvetica, sans-serif; background-color: #323b57; color: #f3f2ef">
     <!-- has a height limit using view height vh. scrolling down for new msgs is handled in script.js -->
+    <div id="dark-theme-container"> <input type="checkbox" id="theme-checkbox" checked>Dark theme </div>
     <div id="message-container"></div>
     <div id="controls-info">
         <form id="send-container">
